Replace the newInstance by getConstructor().newInstance()
Signed-off-by: Keshava Munegowda <keshava.gowda@gmail.com>